--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint .",
-    "test": "./node_modules/.bin/_mocha --recursive test/",
+    "test": "JUNIT_REPORT_PATH=build/tests.xml ./node_modules/.bin/_mocha -R mocha-jenkins-reporter --recursive test/",
     "start": "node server.js"
   },
   "repository": {
@@ -24,7 +24,8 @@
     "eslint": "^1.10.3",
     "eslint-config-pebble": "^1.2.0",
     "eslint-plugin-standard": "^1.3.2",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "mocha-jenkins-reporter": "^0.2.1"
   },
   "eslintConfig": {
     "extends": [
