--- a/package.json
+++ b/package.json
@@ -22,14 +22,13 @@
     "assert": "^1.3.0",
     "co-mocha": "^1.1.2",
     "eslint": "^4.18.2",
-    "eslint-config-pebble": "^1.2.0",
-    "eslint-plugin-standard": "^1.3.2",
+    "eslint-plugin-standard": "^1.3.3",
     "mocha": "^6.2.2",
     "mocha-jenkins-reporter": "^0.2.1"
   },
   "eslintConfig": {
-    "extends": [
-      "pebble"
-    ]
+    "parserOptions": {
+      "ecmaVersion": 6
+    }
   }
 }
